Error message fixed

--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -43,6 +43,17 @@
 
 
 		<!-- SPRING -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-loggin</groupId>
+					<artifactId>commons-loggin</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
