--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -12,12 +12,14 @@
 	<name>shoppingbackend</name>
 	<url>http://maven.apache.org</url>
 
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.3.6.RELEASE</spring.version>
 		<hibernate.version>5.2.7.Final</hibernate.version>
 		<jackson.version>2.8.7</jackson.version>
 	</properties>
+
 
 	<dependencies>
 
@@ -42,7 +44,6 @@
 			</exclusions>
 		</dependency>
 		
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -54,8 +55,14 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
-		<!-- H2 Database -->
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+	
+		<!-- H2 Database --> 
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -83,7 +90,6 @@
 		</dependency>
 
 		<!-- Jackson -->
-		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
